[package]
name = "contract-whistui"
version = "0.1.0"
authors = ["Santiago Libonati <santiago.libonati@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.40.0", features = ["full"] }

